Remove duplicate definition of "bootinfo" structure. Patch provided by Juan RP in PR kern/39495.