sys/arch/x86/include/bootinfo.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: bootinfo.h,v 1.13 2008/05/02 15:26:39 ad Exp $	*/
+/*	$NetBSD: bootinfo.h,v 1.14 2008/09/09 12:09:31 tron Exp $	*/
 
 /*
  * Copyright (c) 1997
@@ -200,6 +200,8 @@ struct bootinfo {
 	 * offset as specified by the previous entry. */
 	uint8_t		bi_data[BOOTINFO_MAXSIZE - sizeof(uint32_t)];
 };
+
+extern struct bootinfo bootinfo;
 
 void *lookup_bootinfo(int);
 #endif /* _LOCORE */
